--- a/package.json
+++ b/package.json
@@ -10,16 +10,23 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@payloadcms/db-postgres": "^3.19.0",
+    "@payloadcms/next": "^3.19.0",
+    "@payloadcms/payload-cloud": "^3.19.0",
+    "@payloadcms/richtext-lexical": "^3.19.0",
     "@radix-ui/react-collapsible": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.5.2",
+    "graphql": "^16.8.1",
     "motion": "^11.17.0",
     "next": "^15.1.6",
+    "payload": "^3.19.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "sharp": "^0.33.5",
     "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
