--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
-    "@payloadcms/db-postgres": "^3.23.0",
-    "@payloadcms/next": "^3.23.0",
-    "@payloadcms/payload-cloud": "^3.23.0",
-    "@payloadcms/richtext-lexical": "^3.23.0",
+    "@payloadcms/db-postgres": "^3.24.0",
+    "@payloadcms/next": "^3.24.0",
+    "@payloadcms/payload-cloud": "^3.24.0",
+    "@payloadcms/richtext-lexical": "^3.24.0",
+    "@payloadcms/storage-s3": "^3.24.0",
     "@radix-ui/react-collapsible": "^1.1.2",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-popover": "^1.1.6",
