--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@payloadcms/richtext-lexical": "^3.24.0",
     "@payloadcms/storage-s3": "^3.24.0",
     "@radix-ui/react-collapsible": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-scroll-area": "^1.2.3",
@@ -28,6 +29,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.5.2",
     "graphql": "^16.8.1",
+    "lucide-react": "^0.475.0",
     "motion": "^11.17.0",
     "next": "^15.1.7",
     "payload": "^3.23.0",
