--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "graphql": "^16.8.1",
     "lucide-react": "^0.475.0",
     "matter-js": "^0.20.0",
+    "matter-wrap": "^0.2.0",
     "motion": "^11.17.0",
     "next": "^15.1.7",
     "payload": "^3.23.0",
