--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.5.2",
     "graphql": "^16.10.0",
+    "lenis": "^1.2.3",
     "lucide-react": "^0.475.0",
     "matter-js": "^0.20.0",
     "matter-wrap": "^0.2.0",
