Implement dynamic metadata

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "motion": "^11.18.2",
     "next": "^15.2.1",
     "payload": "^3.27.0",
+    "posthog-js": "^1.231.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
