Integrate resend for sending emails on checkout

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,12 @@
-WEBSITE_URL=
-DOMAIN_NAME=
-DATABASE_URI=
-PAYLOAD_SECRET=
+# Public
+NEXT_PUBLIC_WEBSITE_URL=
+NEXT_PUBLIC_DOMAIN_NAME=
+
+# Sensitive
 REVALIDATION_SECRET=
+PAYLOAD_SECRET=
+DATABASE_URI=
+RESEND_API_KEY=
 DO_SPACE_BUCKET=
 DO_SPACE_ACCESS_KEY=
 DO_SPACE_SECRET_KEY=
