--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
+    "resend": "^4.1.2",
     "sharp": "^0.33.5",
     "tailwind-merge": "^2.6.0",
     "zod": "^3.24.2"
