Use environment variables for email recipients and domain

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,8 @@ REVALIDATION_SECRET=
 PAYLOAD_SECRET=
 DATABASE_URI=
 RESEND_API_KEY=
+EMAIL_DOMAIN=
+EMAIL_RECIPIENT=
 DO_SPACE_BUCKET=
 DO_SPACE_ACCESS_KEY=
 DO_SPACE_SECRET_KEY=
