--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 # Public
 NEXT_PUBLIC_WEBSITE_URL=
 NEXT_PUBLIC_DOMAIN_NAME=
+NEXT_PUBLIC_POSTHOG_KEY=
+NEXT_PUBLIC_POSTHOG_HOST=
 
 # Sensitive
 REVALIDATION_SECRET=
