--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@tsparticles/confetti": "^3.8.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
     "graphql": "^16.10.0",
     "lenis": "^1.2.3",
